# Kalah

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml  python-tests.yml
docs/: index.html
src/kalah/: cli.py  engine.py  init.py  minimax.py
tests/: test_engine.py
