[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kalah"
version = "1.0.0"
description = "Kalah (Mancala) console game with simple AI"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["kalah", "mancala", "game", "cli"]
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Topic :: Games/Entertainment"
]

[project.scripts]
kalah = "kalah.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
